refactor and new feature
refactored the code.
add sumary card.

--- a/locales/en.json
+++ b/locales/en.json
@@ -8,5 +8,8 @@
     "nopolicechecks":"The police is currently not surveilling",
     "less_then_minute":"Less than a minute.",
     "unknown":"unknown",
-    "minutes":"minutes"
+    "minutes":"minutes",
+    "onerror": "An error occured while retrieving data",
+    "summary_plural": "Currently there are __count__ files with total length of __distance__",
+    "summary_single": "Currently there is __count__ file with total length of __distance__"
 }
