--- a/locales/en.json
+++ b/locales/en.json
@@ -11,5 +11,7 @@
     "minutes":"minutes",
     "onerror": "An error occured while retrieving data",
     "summary_plural": "Currently there are __count__ files with total length of __distance__",
-    "summary_single": "Currently there is __count__ file with total length of __distance__"
+    "summary_single": "Currently there is __count__ file with total length of __distance__",
+    "segment_start": "From",
+    "segment_end": "To"
 }
